--- a/client/LinguaLearn/src/app/components/courses/courses-header/courses-header.component.html
+++ b/client/LinguaLearn/src/app/components/courses/courses-header/courses-header.component.html
@@ -1,1 +1,13 @@
-<p>courses-header works!</p>
+<div class="courses-info">
+  <img src="/assets/about-courses.png" alt="" srcset="" />
+  <div class="info">
+    <div class="title">Welcome to LinguaLearn</div>
+    <div class="desc">
+      LinguaLearn was created to help you learn the language of your dreams for
+      free. Our teachers are nice and friendly so you shouldnt be worried about
+      asking questions. They are the best there is. Before choosing the language
+      you want to learn, get familiar with our teachers!
+    </div>
+    <a routerLink="/teachers">Our Teachers</a>
+  </div>
+</div>
