--- a/client/LinguaLearn/src/app/components/courses/courses/courses.component.html
+++ b/client/LinguaLearn/src/app/components/courses/courses/courses.component.html
@@ -1,1 +1,94 @@
-<p>courses works!</p>
+<div class="courses">
+  <!-- header optional!!! -->
+  <app-courses-header style="width: 100%" *ngIf="showHeader" />
+
+  <div class="title">Latest Courses</div>
+  <div class="course-items">
+    <div class="course">
+      <img
+        src="https://i0.wp.com/whizsmart.com/wp-content/uploads/2020/09/Spanish.jpg?fit=610%2C432&ssl=1"
+        alt=""
+      />
+      <div class="course-info">
+        <div class="name">Spanish Course</div>
+        <div class="period">
+          <div class="start">
+            <i class="fa-solid fa-circle-play"></i> 19-02-2023
+          </div>
+          <div class="duration"><i class="fa-solid fa-clock"></i> 6 months</div>
+        </div>
+        <a href="">View More</a>
+      </div>
+    </div>
+    <div class="course">
+      <img
+        src="https://i0.wp.com/whizsmart.com/wp-content/uploads/2020/09/Spanish.jpg?fit=610%2C432&ssl=1"
+        alt=""
+      />
+      <div class="course-info">
+        <div class="name">Spanish Course</div>
+        <div class="period">
+          <div class="start">
+            <i class="fa-solid fa-circle-play"></i> 19-02-2023
+          </div>
+          <div class="duration"><i class="fa-solid fa-clock"></i> 6 months</div>
+        </div>
+        <a href="">View More</a>
+      </div>
+    </div>
+    <div class="course">
+      <img
+        src="https://i0.wp.com/whizsmart.com/wp-content/uploads/2020/09/Spanish.jpg?fit=610%2C432&ssl=1"
+        alt=""
+      />
+      <div class="course-info">
+        <div class="name">Spanish Course</div>
+        <div class="period">
+          <div class="start">
+            <i class="fa-solid fa-circle-play"></i> 19-02-2023
+          </div>
+          <div class="duration"><i class="fa-solid fa-clock"></i> 6 months</div>
+        </div>
+        <a href="">View More</a>
+      </div>
+    </div>
+    <div class="course">
+      <img
+        src="https://i0.wp.com/whizsmart.com/wp-content/uploads/2020/09/Spanish.jpg?fit=610%2C432&ssl=1"
+        alt=""
+      />
+      <div class="course-info">
+        <div class="name">Spanish Course</div>
+        <div class="period">
+          <div class="start">
+            <i class="fa-solid fa-circle-play"></i> 19-02-2023
+          </div>
+          <div class="duration"><i class="fa-solid fa-clock"></i> 6 months</div>
+        </div>
+        <a href="">View More</a>
+      </div>
+    </div>
+    <div class="course">
+      <img
+        src="https://i0.wp.com/whizsmart.com/wp-content/uploads/2020/09/Spanish.jpg?fit=610%2C432&ssl=1"
+        alt=""
+      />
+      <div class="course-info">
+        <div class="name">Spanish Course</div>
+        <div class="period">
+          <div class="start">
+            <i class="fa-solid fa-circle-play"></i> 19-02-2023
+          </div>
+          <div class="duration"><i class="fa-solid fa-clock"></i> 6 months</div>
+        </div>
+        <a href="">View More</a>
+      </div>
+    </div>
+  </div>
+
+  <!-- WHEN THERE ARE NO COURSES -->
+  <!-- <div class="no-courses">
+        There are currently no courses available. <br />
+        Check back later!
+      </div> -->
+</div>
