--- a/ui/views/register.html
+++ b/ui/views/register.html
@@ -131,7 +131,7 @@
         <div class="input-field">
           <label for="role">You are a:</label>
           <select name="role" id="role">
-            <option value="students">Student</option>
+            <option value="student">Student</option>
             <option value="teacher">Teacher</option>
           </select>
         </div>
