--- a/client/LinguaLearn/src/app/components/shared/header/header.component.html
+++ b/client/LinguaLearn/src/app/components/shared/header/header.component.html
@@ -25,16 +25,16 @@
     <li>
       <a routerLink="/user/profile"><i class="fa-solid fa-user"></i>USERNAME</a>
     </li>
-    <!-- <li>
-      <a routerLink="/user"
+    <li>
+      <a routerLink="/user/login"
         ><i class="fa-solid fa-right-to-bracket"></i> Login</a
       >
     </li>
     <li>
-      <a routerLink="/user/login"
+      <a routerLink="/user/register"
         ><i class="fa-solid fa-user-plus"></i> Register</a
       >
-    </li> -->
+    </li>
     <li>
       <a href=""><i class="fa-solid fa-right-from-bracket"></i> Logout</a>
     </li>
