--- a/client/LinguaLearn/src/app/components/shared/header/header.component.html
+++ b/client/LinguaLearn/src/app/components/shared/header/header.component.html
@@ -36,7 +36,9 @@
       >
     </li>
     <li>
-      <a href=""><i class="fa-solid fa-right-from-bracket"></i> Logout</a>
+      <a (click)="logout()"
+        ><i class="fa-solid fa-right-from-bracket"></i> Logout</a
+      >
     </li>
   </ul>
 
