--- a/client/LinguaLearn/src/app/components/user/register/register.component.html
+++ b/client/LinguaLearn/src/app/components/user/register/register.component.html
@@ -88,7 +88,7 @@
     <div class="input-field">
       <label for="role">You are a:</label>
       <select name="role" id="role" formControlName="role" required>
-        <option value="student" [selected]="true">Student</option>
+        <option value="student">Student</option>
         <option value="teacher">Teacher</option>
       </select>
     </div>
