--- a/client/LinguaLearn/src/app/components/courses/course-create/course-create.component.css
+++ b/client/LinguaLearn/src/app/components/courses/course-create/course-create.component.css
@@ -137,3 +137,11 @@
     display: block;
   }
 }
+
+input.ng-invalid.ng-touched {
+  border: red 1px solid;
+}
+
+input.ng-valid.ng-touched {
+  border: 1px solid greenyellow;
+}
