--- a/ui/views/create.html
+++ b/ui/views/create.html
@@ -165,6 +165,20 @@
             </button>
           </div>
         </div>
+
+        <div class="form-errors full-length">
+          <div class="title">Form Invalid</div>
+          <div class="form-error">
+            <span>Email is invalid.</span>
+          </div>
+          <div class="form-error">
+            <span>Email is required.</span>
+          </div>
+          <div class="form-error">
+            <span>Email is required.</span>
+          </div>
+        </div>
+
         <button type="submit">Create Course</button>
       </form>
     </section>
