--- a/client/LinguaLearn/src/styles.css
+++ b/client/LinguaLearn/src/styles.css
@@ -49,3 +49,15 @@ body {
   vertical-align: middle;
   font-weight: 900;
 }
+
+.important-text {
+  position: relative;
+  width: 91%;
+  padding: 10px;
+  border: 1px solid #f72f49;
+  border-radius: 5px;
+  font-size: 16px;
+  text-align: center;
+  text-transform: uppercase;
+  font-weight: 700;
+}
