--- a/client/LinguaLearn/src/app/components/courses/course-details/course-details.component.html
+++ b/client/LinguaLearn/src/app/components/courses/course-details/course-details.component.html
@@ -1,1 +1,83 @@
-<p>course-details works!</p>
+<section class="details-page">
+  <div class="course-item">
+    <div class="main-info">
+      <div class="left-side">
+        <img
+          src="https://i0.wp.com/whizsmart.com/wp-content/uploads/2020/09/Spanish.jpg?fit=610%2C432&ssl=1"
+          alt=""
+        />
+      </div>
+      <div class="right-side">
+        <div class="name">Spanish Course</div>
+        <div class="desc-item">
+          <div class="title">Teacher:</div>
+          <div class="value"><a href="">Kristiyan Petsanov</a></div>
+        </div>
+        <div class="desc-item">
+          <div class="title">Difficulty:</div>
+          <div class="value">Mid Level</div>
+        </div>
+        <div class="desc-item">
+          <div class="title">Course Size:</div>
+          <div class="value">25</div>
+        </div>
+        <div class="desc-item">
+          <div class="title">Spots:</div>
+          <div class="value">14</div>
+        </div>
+        <div class="desc-item">
+          <div class="title">Start Date:</div>
+          <div class="value">25/02/2023</div>
+        </div>
+        <div class="desc-item">
+          <div class="title">Duration:</div>
+          <div class="value">6 months</div>
+        </div>
+      </div>
+    </div>
+    <div class="aditional-info">
+      <div class="desc-item">
+        <div class="title">Description</div>
+        <div class="value">
+          Mnogo interesen kurs ko da ti kajaMnogo interesen kurs ko da ti
+          kajaMnogo interesen kurs ko da ti kajaMnogo interesen kurs ko da ti
+          kajaMnogo interesen kurs ko da ti kajaMnogo interesen kurs ko da ti
+          kajaMnogo interesen kurs ko da ti kajaMnogo interesen kurs ko da ti
+          kajaMnogo interesen kurs ko da ti kajaMnogo interesen kurs ko da ti
+          kajaMnogo interesen kurs ko da ti kajaMnogo interesen kurs ko da ti
+          kajaMnogo interesen kurs ko da ti kajaMnogo interesen kurs ko da ti
+          kajaMnogo interesen kurs ko da ti kajaMnogo interesen kurs ko da ti
+          kajaMnogo interesen kurs ko da ti kajaMnogo interesen kurs ko da ti
+          kajaMnogo interesen kurs ko da ti kajaMnogo interesen kurs ko da ti
+          kajaMnogo interesen kurs ko da ti kajaMnogo interesen kurs ko da ti
+          kajaMnogo interesen kurs ko da ti kajaMnogo interesen kurs ko da ti
+          kajaMnogo interesen kurs ko da ti kajaMnogo interesen kurs ko da ti
+          kajaMnogo interesen kurs ko da ti kajaMnogo interesen kurs ko da ti
+          kajaMnogo interesen kurs ko da ti kajaMnogo interesen kurs ko da ti
+          kajaMnogo interesen kurs ko da ti kaja
+        </div>
+      </div>
+      <div class="desc-item">
+        <div class="title">Schedule</div>
+        <div class="schedules">
+          <div class="schedule" (click)="toggleInfo()">
+            <div class="name">1. Course Introduction</div>
+            <div class="date" [hidden]="!infoShown">
+              <i class="fa-solid fa-calendar-days"></i> 2023-12-20
+            </div>
+            <i
+              class="fa-solid fa-angles-down action-arrow"
+              [ngClass]="{ rotated: infoShown }"
+            ></i>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="controls">
+      <a href="">Edit</a>
+      <a href="">Delete</a>
+      <!-- <a href="">Sign Up</a> -->
+      <!-- <span>You have already signed up for this course!</span> -->
+    </div>
+  </div>
+</section>
