--- a/client/LinguaLearn/src/app/components/user/login/login.component.css
+++ b/client/LinguaLearn/src/app/components/user/login/login.component.css
@@ -131,7 +131,7 @@
 .login-form {
   position: relative;
   display: flex;
-  width: fit-content;
+  width: 350px;
   flex-direction: column;
   background-color: #6291de;
   padding: 40px 40px 40px 40px;
