--- a/client/LinguaLearn/src/app/components/courses/course-edit/course-edit.component.html
+++ b/client/LinguaLearn/src/app/components/courses/course-edit/course-edit.component.html
@@ -1,1 +1,258 @@
-<p>course-edit works!</p>
+<section class="create-page">
+  <form class="create-form" [formGroup]="courseForm" (ngSubmit)="onSubmit()">
+    <div class="create-title">Create Course</div>
+
+    <div class="input-field">
+      <label for="name">Course Name</label>
+      <input
+        type="text"
+        name="name"
+        id="name"
+        placeholder="Entry-Level English Course"
+        formControlName="name"
+        required
+      />
+    </div>
+    <div class="input-field">
+      <label for="image">Course Image URL</label>
+      <input
+        type="text"
+        name="image"
+        id="image"
+        placeholder="https://exmaple-image.png"
+        formControlName="image"
+        required
+      />
+    </div>
+    <div class="input-field">
+      <label for="level">Course Level</label>
+      <select name="level" id="level" formControlName="level" required>
+        <option value="entry">Entry Level</option>
+        <option value="mid">Mid Level</option>
+        <option value="advanced">Advanced Level</option>
+        <option value="expert">Expert Level</option>
+      </select>
+    </div>
+    <div class="input-field">
+      <label for="capacity">Course Capacity</label>
+      <input
+        type="number"
+        name="capacity"
+        id="capacity"
+        max="100"
+        min="1"
+        placeholder="25"
+        formControlName="capacity"
+        required
+      />
+    </div>
+    <div class="input-field">
+      <label for="date">Course Start Date</label>
+      <input
+        type="date"
+        name="date"
+        id="date"
+        formControlName="date"
+        required
+      />
+    </div>
+    <div class="input-field">
+      <label for="duration">Course Duration</label>
+      <input
+        type="text"
+        name="duration"
+        id="duration"
+        placeholder="6 months"
+        formControlName="duration"
+        required
+      />
+    </div>
+    <div class="input-field full-length">
+      <label for="description">Course Description</label>
+      <textarea
+        name="description"
+        id="description"
+        cols="30"
+        rows="5"
+        placeholder="This course will help you get started with English!"
+        formControlName="description"
+        required
+      ></textarea>
+    </div>
+    <div
+      class="input-field full-length"
+      *ngIf="courseForm.controls.date.value != ''"
+    >
+      <label for="schedule">Course Schedule</label>
+
+      <ng-container
+        formArrayName="courses"
+        *ngFor="let course of courses.controls; index as i"
+      >
+        <ng-container [formGroupName]="i">
+          <input
+            type="text"
+            name="lessonName{{ i + 1 }}"
+            id="lessonName{{ i + 1 }}"
+            placeholder="Lesson {{ i + 1 }} - Name"
+            formControlName="lessonName"
+            required
+          />
+          <input
+            type="date"
+            name="lessonDate{{ i + 1 }}"
+            id="lessonDate{{ i + 1 }}"
+            placeholder="Lesson {{ i + 1 }} - Date"
+            formControlName="lessonDate"
+            [min]="courseForm.controls.date.value"
+            [disabled]="courseForm.controls.date.value != '' ? false : true"
+            required
+          />
+        </ng-container>
+      </ng-container>
+
+      <div class="schedule-controls">
+        <button (click)="addLesson()" type="button">
+          <span>Add Lesson</span><i class="fa-solid fa-plus"></i>
+        </button>
+        <button (click)="removeLesson()" type="button">
+          <span>Remove Last Lesson</span><i class="fa-solid fa-minus"></i>
+        </button>
+      </div>
+    </div>
+
+    <div class="important-text" *ngIf="courseForm.controls.date.value == ''">
+      Schedule will be available after you select the starting date for the
+      course.
+    </div>
+
+    <div
+      class="form-errors full-length"
+      *ngIf="courseForm.touched && courseForm.invalid"
+    >
+      <div class="title">Form Invalid</div>
+
+      <!-- Name Validations -->
+      <ng-container *ngIf="courseForm.controls.name.touched">
+        <div
+          class="form-error"
+          *ngIf="courseForm.controls.name.errors?.['required']"
+        >
+          <span>Name is required.</span>
+        </div>
+        <div
+          class="form-error"
+          *ngIf="courseForm.controls.name.errors?.['minlength']"
+        >
+          <span>Name must be at least 5 characters long.</span>
+        </div>
+      </ng-container>
+
+      <!-- Image Validations -->
+      <ng-container *ngIf="courseForm.controls.image.touched">
+        <div
+          class="form-error"
+          *ngIf="courseForm.controls.image.errors?.['required']"
+        >
+          <span>Image is required.</span>
+        </div>
+        <div
+          class="form-error"
+          *ngIf="courseForm.controls.image.errors?.['pattern']"
+        >
+          <span>Image URL is invalid.</span>
+        </div>
+      </ng-container>
+
+      <!-- Level Validations -->
+      <ng-container *ngIf="courseForm.controls.level.touched">
+        <div
+          class="form-error"
+          *ngIf="courseForm.controls.level.errors?.['required']"
+        >
+          <span>Level is required.</span>
+        </div>
+      </ng-container>
+
+      <!-- Capacity Validations -->
+      <ng-container *ngIf="courseForm.controls.capacity.touched">
+        <div
+          class="form-error"
+          *ngIf="courseForm.controls.capacity.errors?.['required']"
+        >
+          <span>Capacity is required.</span>
+        </div>
+        <div
+          class="form-error"
+          *ngIf="courseForm.controls.capacity.errors?.['min']"
+        >
+          <span>Capacity must be 1 or above.</span>
+        </div>
+        <div
+          class="form-error"
+          *ngIf="courseForm.controls.capacity.errors?.['max']"
+        >
+          <span>Capacity must be 100 or below.</span>
+        </div>
+      </ng-container>
+
+      <!-- Date Validations -->
+      <ng-container *ngIf="courseForm.controls.date.touched">
+        <div
+          class="form-error"
+          *ngIf="courseForm.controls.date.errors?.['required']"
+        >
+          <span>Date is required.</span>
+        </div>
+      </ng-container>
+
+      <!-- Duration Validations -->
+      <ng-container *ngIf="courseForm.controls.duration.touched">
+        <div
+          class="form-error"
+          *ngIf="courseForm.controls.duration.errors?.['required']"
+        >
+          <span>Duration is required.</span>
+        </div>
+      </ng-container>
+
+      <!-- Description Validations -->
+      <ng-container *ngIf="courseForm.controls.description.touched">
+        <div
+          class="form-error"
+          *ngIf="courseForm.controls.description.errors?.['required']"
+        >
+          <span>Description is required.</span>
+        </div>
+        <div
+          class="form-error"
+          *ngIf="courseForm.controls.description.errors?.['minlength']"
+        >
+          <span>Description must be at least 10 characters long.</span>
+        </div>
+        <div
+          class="form-error"
+          *ngIf="courseForm.controls.description.errors?.['maxlength']"
+        >
+          <span>Description must be max 200 characters long.</span>
+        </div>
+      </ng-container>
+
+      <!-- Lessons Validation -->
+      <ng-container *ngIf="courseForm.controls.courses.invalid">
+        <div class="form-error" *ngIf="courseForm.controls.courses.invalid">
+          <span>Not all lesson data is filled in.</span>
+        </div>
+      </ng-container>
+
+      <!-- All data validation -->
+      <ng-container *ngIf="courseForm.touched">
+        <div class="form-error" *ngIf="courseForm.invalid">
+          <span>Not all data is filled in or not all data is correct.</span>
+        </div>
+      </ng-container>
+    </div>
+
+    <button type="submit" [disabled]="courseForm.invalid">Create Course</button>
+  </form>
+</section>
